--- a/src/index.css
+++ b/src/index.css
@@ -4,14 +4,6 @@
   box-sizing: border-box;
 }
 
-body {
-  background-image: url('../public/png/bg-photo.png');
-  background-size: cover;
-  background-attachment: fixed;
-  background-repeat: no-repeat;
-  background-position: center center;
-}
-
 .App {
-  color: white;
+  color: black;
 }
